# HyperWhale

./: .env.example  .gitignore  README.md  discover.bat  hyperwhale_task.xml  pyproject.toml  requirements.txt  run.bat
data/: bot_exclusions.json  bot_scan_results.json  cex_sentiment.json  discovered_whales.json  live_positions_snapshot.json  seed_whales.json  whale_addresses.json
docs/: WHALE_TRACKER_PRD.md
notebooks/: api_playground.ipynb
reports/: _test_js.js  bubble_map.html  cex_sentiment.html  liq_heatmap.html  wallet_0x0048d42f.html  wallet_0x0087188d.html  wallet_0x00897e2d.html  wallet_0x01535410.html  wallet_0x0187c760.html  wallet_0x020ca66c.html  wallet_0x02fbbf39.html  wallet_0x0305c8aa.html  wallet_0x0320e278.html  wallet_0x0423b4b2.html  wallet_0x047f3853.html  wallet_0x049bdc37.html  wallet_0x0514f2f3.html  wallet_0x051c2e6d.html  wallet_0x054a01da.html  wallet_0x056295dd.html  wallet_0x05b5a0ae.html  wallet_0x05e70979.html  wallet_0x0620b7cd.html  wallet_0x06466f9a.html  wallet_0x064e8906.html  wallet_0x0682f4ee.html  wallet_0x06bc596f.html  wallet_0x06cecfba.html  wallet_0x0748e296.html  wallet_0x07fd7e70.html  wallet_0x082e843a.html  wallet_0x0898fa5c.html  wallet_0x089fe537.html  wallet_0x08bf75d1.html  wallet_0x08c14b32.html  wallet_0x091144e6.html  wallet_0x091159a8.html  wallet_0x0980b34a.html  wallet_0x0a1a4f14.html  wallet_0x0a3343b6.html  (+635 more)
scripts/: _explain_db.py  _label_check.py  _liq_check.py  bubble_map.py  cex_sentiment.py  cluster_map.py  debug_whale.py  detect_bots.py  fetch_snapshot.py  leaderboard_debug.py  leaderboard_debug2.py  (+8 more)
(+24 files in other folders)
