[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hyperwhale"
version = "0.1.0"
description = "Whale Behavior Analytics Engine for Hyperliquid"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Sahil"},
]

dependencies = [
    # Hyperliquid
    "hyperliquid-python-sdk>=0.22.0",
    "httpx>=0.27.0",
    # Data
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "sqlalchemy>=2.0.0",
    # Analytics
    "scikit-learn>=1.4.0",
    "networkx>=3.2",
    "scipy>=1.12.0",
    # Config & Logging
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    # Scheduling
    "apscheduler>=3.10.0",
    # CLI Dashboard
    "rich>=13.7.0",
    # Telegram
    "python-telegram-bot>=21.0",
    # Visualization (notebooks)
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
